# outlan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  regenerate_screenshots.sh  requirements.txt
.github/workflows/: docker-build.yml  docker-test.yml  release.yml
app/: __init__.py  config.py  schema.sql
app/blueprints/: api_routes.py  audit_routes.py  import_export_routes.py  ipam_routes.py  main_routes.py  segment_routes.py  snapshot_routes.py
app/models/: __init__.py
app/templates/: audit.html  base.html  base_init.html  db_exists.html  error.html  import_error.html  import_export.html  ipam_init.html  ipam_main.html  restore_confirmation.html  segment_planner.html  settings.html  snapshots.html
config/: settings.ini.example
data/: ipam_screenshots.db
screenshots/: README.md  docker-compose.yml  generate_screenshots.py  run_screenshots.py  run_screenshots.sh  social-preview-template.html
tests/: conftest.py  test_api_crud_operations.py  test_api_error_scenarios.py  test_audit_ui.py  test_block_create.py  test_block_delete.py  test_block_movement.py  test_block_read.py  test_block_update.py  test_block_validation.py  test_container_overlap_validation.py  test_critical_error_scenarios.py  test_current_error_behavior.py  test_edit_functionality.py  test_error_scenarios.py  test_export_csv.py  test_export_functionality.py  test_import_csv_functionality.py  test_import_csv_validation.py  test_main_page_basic.py  test_main_page_elements.py  test_main_page_functionality.py  test_network_edge_cases.py  test_network_sorting.py  test_routes.py  test_segment_view.py  test_snapshot_restore.py  test_subnet_create.py  test_subnet_delete.py  test_subnet_display.py  test_subnet_read.py  test_subnet_update.py  test_subnet_validation.py  test_swagger_docs.py  test_theme.py  test_timezone_functions.py
(+28 files in other folders)
